
Version ClaSS-0.8.67 release (2009/03/27)
-----------------------------------------

Reinstating cattable as part of the reportdefs to maintain backward
compatibility for now.

Update your report templates! The comment value now contains an
embedded div. It has to have copy-of and not value-of used in the xslt
to display.


Version ClaSS-0.8.66 release (2009/03/12)
-----------------------------------------

A message button added to the absences list to allow emails to contacts
to remind them to justify unauthorised absences.

Bugfix to tranfer nos when yid=0.

Included postcodes and professions (from their guardians) as part of
the student singlefield function.

The import of assessment scores is now fixed to handle bid=G.

The assessment field in the mark table now goes beyond flagging
columns as assessments, it also has an 'other' value to group special
assessments (like estimates and targets together). Apply patch the
patch!

Have moved materialtype for orders to be a categorydef with
type=mat. Patch includes a few defaults.

The clickToAction js for rowaction buttons now allows for
action=print. It then calls the regular openPrintReport so needs an xslt
transform.

A clicktoprint image class for css added.

The orders_list makes use of the new clicktoprint button calling xslt
order_form.xslt.


Version ClaSS-0.8.65 release (2009/02/20)
-----------------------------------------

Changed the eidsid result field to a varchar(30) to match the ratings -
any grades longer than 3 char were being chopped.

Added a get_age function to display student age from dob.

The fetchReportCategories function renamed to get_report_categories.

Added a clicktoconfigure imagebutton.

A new helper window added for editing categories.

Changed default year for enrolment table to next curriculum year.

The js checkall function now ifnores hidden rows which have been
filtered from the list.

Replaced the ResultQualifier and Method fields for Assessments with